--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_keranjang">Keranjang</string>
+    <string name="login">Login</string>
+    <string name="logout">Logout</string>
+    <string name="sudah_login">SUDAH LOGIN</string>
+    <string name="belum_login">BELUM LOGIN</string>
 </resources>
